--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hapi": "^13.2.1",
     "image-size": "^0.4.0",
     "imagemin": "^4.0.0",
+    "inert": "^3.2.0",
     "lwip": "0.0.8"
   }
 }
