--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "image-size": "^0.4.0",
     "imagemin": "^4.0.0",
     "inert": "^3.2.0",
-    "lwip": "0.0.8"
+    "sharp": "^0.16.1"
   }
 }
